# octave

./: .gitignore  Cargo.toml  PLAN.md  README.md  rust-toolchain.toml
.claude/skills/module-plan/: SKILL.md
.claude/skills/octave-backlog-review/: SKILL.md
.claude/skills/octave-build/: SKILL.md
.claude/skills/octave-cycle/: SKILL.md
.claude/skills/octave-review/: SKILL.md
.claude/skills/octave-test/: SKILL.md
app/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  Chat.tsx  index.css  main.tsx  octaveTools.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: app_actor.rs  lib.rs  main.rs
chat/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
chat/src/: index.ts
crates/octave-audio-devices/: Cargo.toml
crates/octave-audio-devices/src/: lib.rs
crates/octave-engine/: Cargo.toml
crates/octave-engine/src/: audio_actor.rs  handler.rs  lib.rs  types.rs
crates/octave-engine/tests/: subprocess_handshake.rs
crates/octave-handler/: Cargo.toml
crates/octave-handler/src/: engine_client.rs  lib.rs  server.rs  state.rs
crates/octave-mcp/: Cargo.toml
crates/octave-mcp/src/: audio_actor.rs  handler.rs  lib.rs  types.rs
crates/octave-mcp/tests/: subprocess_handshake.rs
crates/octave-player/: Cargo.toml
crates/octave-player/examples/: play-demo.rs
crates/octave-player/src/: audio.rs  device.rs  file_source.rs  lib.rs  reader.rs  ring.rs  rt.rs  signals.rs  source.rs  telemetry.rs  types.rs  wav.rs
crates/octave-recorder/: Cargo.toml
crates/octave-recorder/examples/: record-demo.rs
crates/octave-recorder/src/: audio.rs  device.rs  error.rs  lib.rs  ring.rs  rt.rs  state.rs  test_support.rs  writer.rs
crates/octave-recorder/src/wav/: header.rs  mod.rs  rf64.rs
docs/: backlog-review.md
docs/decisions/: 0001-tech-stack.md  0004-workspace-shape.md
docs/modules/: mcp-layer.md  playback-audio.md  record-audio.md  system-architecture.md
