[workspace]
resolver = "3"
members = [
    "crates/octave-mcp",
    "crates/octave-player",
    "crates/octave-recorder",
]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
authors      = ["Sandeep SJ <sandeepsj0000@gmail.com>"]
homepage     = "https://github.com/sandeepsj/octave"
repository   = "https://github.com/sandeepsj/octave"

[workspace.dependencies]
cpal            = "0.15"
rtrb            = "0.3"
assert_no_alloc = "1.1"
bytemuck        = "1"
thiserror       = "2"
tracing         = "0.1"
uuid            = { version = "1", features = ["v4", "serde"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
schemars        = "1"
crossbeam-channel = "0.5"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# rmcp 1.5: macros for #[tool_router] / #[tool_handler], server for ServerHandler,
# transport-io for the stdio adapter, schemars for typed-arg schema derivation.
rmcp            = { version = "1.5", features = ["server", "macros", "transport-io", "schemars"] }
# in-tree workspace crates
octave-player   = { path = "crates/octave-player" }
octave-recorder = { path = "crates/octave-recorder" }
# dev-deps shared across crates
hound           = "3"
tempfile        = "3"

[workspace.lints.clippy]
float_cmp                = "warn"
lossy_float_literal      = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap       = "warn"
cast_precision_loss      = "warn"

[profile.release]
lto           = "fat"
codegen-units = 1
debug         = false
panic         = "abort"
strip         = "symbols"

[profile.dev]
debug-assertions = true
overflow-checks  = true
