[package]
name        = "octave-app"
version     = "0.0.1"
description = "Octave Tauri shell — wraps the engine crates behind a React UI."
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
authors      = ["Sandeep SJ <sandeepsj0000@gmail.com>"]
homepage     = "https://github.com/sandeepsj/octave"
repository   = "https://github.com/sandeepsj/octave"

# Tauri's recommended layout: a thin `bin` (main.rs) calling into a
# library so future tauri::test integrations can target the same code.
[lib]
name = "octave_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
# `cpal::Stream` is `!Send` on every backend, so `PlaybackHandle`
# can't sit in `tauri::State` (which must be `Send + Sync`). Adopt the
# same actor pattern as `octave-engine::audio_actor`: a dedicated thread
# owns the handle, async Tauri commands send `Command`s through a
# crossbeam channel and `await` a tokio oneshot reply.
crossbeam-channel = "0.5"
# Tauri brings tokio internally; we depend on it explicitly to
# pull in `sync` (oneshot) without leaning on a re-export.
tokio = { version = "1", features = ["sync"] }
# Engine crates the UI exposes via tauri::commands. Path-deps
# (octave-app is intentionally NOT a workspace member — see root
# Cargo.toml comment).
octave-audio-devices = { path = "../../crates/octave-audio-devices" }
octave-player        = { path = "../../crates/octave-player" }
octave-recorder      = { path = "../../crates/octave-recorder" }

# Mirror the workspace's clippy gates so the app's Rust side is
# held to the same bar as the engine crates.
[lints.clippy]
float_cmp                = "warn"
lossy_float_literal      = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap       = "warn"
cast_precision_loss      = "warn"

[profile.release]
lto           = "fat"
codegen-units = 1
debug         = false
panic         = "abort"
strip         = "symbols"

[profile.dev]
debug-assertions = true
overflow-checks  = true
