[package]
name        = "octave-audio-devices"
description = "Shared cross-platform audio device enumeration + capability query for Octave's playback and recording engines."
version     = "0.1.0"
edition     .workspace = true
rust-version.workspace = true
license     .workspace = true
authors     .workspace = true
homepage    .workspace = true
repository  .workspace = true

[dependencies]
cpal       .workspace = true
serde      .workspace = true
thiserror  .workspace = true
tracing    .workspace = true

[lints]
workspace = true
