[package]
name        = "octave-engine"
version     = "0.1.0"
description = "Octave's audio engine process. Owns the cpal hardware + active streams; speaks low-level MCP (output_*, input_*, stream_*). The handler talks to this over stdio/UDS; never network-bound. See docs/modules/system-architecture.md."

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true

[dependencies]
octave-audio-devices = { workspace = true }
octave-player        = { workspace = true }
octave-recorder      = { workspace = true }
rmcp               = { workspace = true }
tokio              = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
crossbeam-channel  = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

[[bin]]
name = "octave-engine"
path = "src/bin/octave-engine.rs"

[lints]
workspace = true
