[package]
name        = "octave-recorder"
version     = "0.1.0"
description = "Octave's audio input layer: open a device, capture frames in real-time, write 32-bit float WAV. No dropouts, no allocations, no locks on the audio thread."

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true

[dependencies]
bytemuck  = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
uuid      = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
hound    = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
